--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,9 @@
 name = compat-gmime-26
 url = https://download.gnome.org/sources/gmime/2.6/gmime-2.6.23.tar.xz
 archives = 
-giturl = https://github.com/GNOME/gmime.git
+giturl = https://gitlab.gnome.org/GNOME/gmime
+domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +19,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
@@ -37,6 +39,8 @@ no_autostart = false
 nodebug = true
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
